Tue Jan 26  8:15:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSThread.m: ([-sleepUntilDate:]) cast argument of usleep() to
	be integer rather than float - suggested by stark@easynet.fr

Sun Jan 24  8:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSConnection.m: Preliminary work for handling DO between
	machines wiuth different pointer sizes.
	* src/NSDistantObject.m: ditto
	* src/include/NSConnection.h: ditto
	* src/include/NSDistantObject.h: ditto
	* src/include/DistributedObjects.h: ditto

Tue Jan 19 12:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSUserDefaults.m: Fixed to update periodically from disk and
	to post notifications if the on-disk copy has changed.
	* src/include/NSUserDefaults.m: Changed vtimer info for update.

Fri Jan 15 10:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSObjCRuntime.m: Added GSGetInstanceVariable() and
	GSSetInstanceVariable() methods - extensions to gnustep.
	* src/NSObjCRuntime.h: ditto

Tue Jan 12  4:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSProcessInfo.m: Fix for GNU/Linux-powerpc (__PPC__) to get
	class initialised with argument info.
	* src/include/fake-main.h: ditto

Mon Jan 11 16:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        Fixes for bugs reported by Benhur-de-Oliveira.Stein@imag.fr
        * src/NSDictionary.m: ([-initWithObjectsAndKeys:]) fixed test for nil.
        * src/NSSet.m: Added makeObjectsPerformSelector methods.
        * src/NSString.m: ([-rangeOfComposedCharacterSequenceAtIndex:]) find
        range from before the index if necessary.
        * Tidied allocation methods in NSArray.m NSDictionary.m

Sat Jan  8  6:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * src/NSPortNameServer.m: Raise exception on failure to register name.

Fri Jan  8  9:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
